[package]
name = "macos_livekit_video"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.72"
ethers = "2.0.8"
http = "0.2.9"
livekit = { version = "0.2.0", features=["rustls-tls-webpki-roots"] }
serde = { version = "1.0.183", features = ["serde_derive", "derive"] }
serde_json = "1.0.104"
surf = { version = "2.3.2", default-features = false, features = ["h1-client-rustls"] }
tokio = { version = "1.29.1", features = ["rt"] }
